test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-4.xq
(:******** for ********************* let *****foo*********** where ****foo*foo***:)
(: Test:K-ForExprPositionalVar-4        for    where            where    where    :)
(: Written by:  Englich        for              for    ne  foo    :)(: Date: where  2006-10-05T18:29:37+02:00         $          for        :)
(: Purpose: Position variable which is not in scope.  eq    :)
(:******************* where * ne * ne ************** for ***** ne **foo***********:)
for $a  $p1 in (1, 2),$b for  at $p2 in (1, 2, $ where c at$p3 in (1, 2) return 1, $p3